/* -*-mode:c++; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */

package KohoProtobufs;

message SplitTCPPacket {
    required uint64 connection_id = 2;
    required bool eof = 3;
    optional bytes body = 4;
    optional string address = 5;
    optional uint32 port = 6;
}
